# qa_guru_python_4_25_diplom_project_API_UI_

./: .gitignore  README.md  conftest.py  pyproject.toml  test_ui_before_change_pageobject.py
allure-results/: 022adcf6-a4c9-4e76-8aee-171bc6ac20e1-result.json  025aa363-47d0-4b9b-ba37-bafbfc24b1c8-attachment.json  0337fd1a-d4f6-4646-9ef3-57b7024ec92c-result.json  05400cd0-5ba3-4d81-aecb-06f991df9ef4-result.json  06b3e6b2-cf4f-4fd2-a12a-15f6d0b364be-result.json  0941ca4b-a104-42c2-b540-0b8a530bdc94-result.json  0985cd7d-17fd-456e-ba8f-82145b3429d0-attachment.json  0c2e64a2-27e4-44c8-b402-c08dd3ae4ab1-attachment.json  0da44885-ad44-43d0-a00e-daf3180f2c25-attachment.json  0dd2874a-fa10-4bb7-825b-4028970f580c-attachment.json  12373638-8c8c-4fba-a908-f9d8ea92b3bf-attachment.txt  13902e0f-1e23-4aa2-8d5b-cf5899bc4d28-attachment.txt  199b14e3-da48-4b2e-a0ed-32769892e0c3-result.json  1ae06beb-a8e3-4853-9539-9646d83f7f89-attachment.txt  1bcf6fa8-d09a-4609-a47d-ab5d1e3d1c40-container.json  1e6a7c8f-80d7-4851-b345-c673d420341e-result.json  21cc0bea-f57f-4b59-9b3a-bc9354714075-attachment.json  21d520f8-8d66-484a-9174-93f7435bbf07-attachment.txt  2253f59f-d7c6-4065-8eb1-faf085713d6b-container.json  2643dc38-8bc1-4906-ac46-6b44c7506ffd-attachment.txt  26d02663-96c2-4eb6-a3ca-926ed75485f0-result.json  299d3a65-68ea-40fc-ac9c-9e66edbd4692-result.json  2a3232c4-f80d-49fe-9b7b-55479188f2a7-result.json  2cb2d7c7-af5b-4844-b5e9-87acdfd08ead-attachment.txt  2f201cd7-1f55-40aa-8b2c-7eb9bd21b650-attachment.json  2fa3b8bd-b9f9-4b7c-9e79-ae63fa822309-attachment.txt  (+107 more)
models/: api_model.py  (+1 more)
(+52 files in other folders)
